# Freight-extractor

./: .gitignore  README.md  start-backend.ps1  start-backend.sh  start-frontend.ps1  start-frontend.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-local.txt
backend/app/: __init__.py  config.py  db.py  main.py  storage.py  types.py
backend/app/api/: routes_export.py  routes_jobs.py  routes_rates.py  routes_review.py  routes_search.py  routes_upload.py  routes_vendors.py
backend/app/canonical/: models.py  repository.py  schemas.py
backend/app/classification/: ai_classifier.py  classifier.py  features.py  fingerprint_store.py  result.py  rule_classifier.py
backend/app/core/: celery_app.py  confidence.py  enums.py  exceptions.py  executor.py  logging.py  pipeline.py  tasks.py
backend/app/export/: excel_writer.py  export_service.py
backend/app/extraction/: digital_extractor.py  extractor.py  ocr_extractor.py  raw_table.py  table_detect.py
backend/app/ingestion/: page_classifier.py  pdf_loader.py
backend/app/metadata/: clause_extractor.py  metadata_extractor.py
backend/app/normalization/: canonical_row.py  normalizer.py  route_expander.py  unit_normalizer.py  zone_resolver.py
backend/app/search/: embedder.py  indexer.py  nlq_parser.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: init_db.py
backend/tests/: test_api.py  test_classification.py  test_confidence.py  test_export.py  test_extraction.py  test_normalization.py  test_search.py  test_validation.py
backend/vendor_profiles/: _schema.yaml  safexpress.yaml
(+39 files in other folders)
