[project]
name = "freight-intelligence"
version = "0.1.0"
description = "AI-Powered Freight Agreement Intelligence Platform for Mankind Pharma"
requires-python = ">=3.11"
dependencies = [
    # --- API / app ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",     # file uploads
    # --- persistence ---
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",          # Postgres driver
    "pgvector>=0.3",                 # vector column type
    # --- async / jobs ---
    "celery[redis]>=5.4",
    "redis>=5.0",
    # --- extraction (Phase 3, declared now so the env is stable) ---
    "pdfplumber>=0.11",
    "camelot-py>=0.11",
    "opencv-python-headless>=4.10",
    "easyocr>=1.7",
    "pypdfium2>=4.30",               # fast page rasterization for OCR path
    "numpy>=1.26",
    # --- AI / RAG (Phase 7/8) ---
    "anthropic>=0.39",
    "openai>=1.54",
    # --- export ---
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]   # ship only the app package (not migrations/vendor_profiles)
